refactor: shared form view nested list api corrections
